@@ -9,6 +9,7 @@ Date: 00. 00. 0000
     - Extended the overload beacon detection to a couple more mods (Thanks ctgPi!)
     - Changed the matrix settings dialog to show items in natural sort order (Thanks ctgPi!)
     - Moved a couple of preferences from the production frame to the preferences dialog
+    - Removed the background dimmer and click-blocker around the main interface
     - Simplified indentation visuals for folded out subfloors
     - Re-arranged the preferences dialog slightly
   Bugfixes:
